@@ -321,6 +321,8 @@
     <Compile Include="Registration\ComponentDescriptor.cs" />
     <Compile Include="Registration\ComponentInstanceDescriptor.cs" />
     <Compile Include="Registration\ComponentRegistration.cs" />
+    <Compile Include="Registration\Configuration.cs" />
+    <Compile Include="Registration\ConfigurationDescriptor.cs" />
     <Compile Include="Registration\CustomDependencyDescriptor.cs" />
     <Compile Include="Registration\ExtendedPropertiesDescriptor.cs" />
     <Compile Include="Registration\Interceptor\InterceptorDescriptor.cs" />
